--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "canvas-sketch": "^0.7.5",
+    "canvas-sketch-cli": "^1.11.15",
     "three": "^0.140.0"
   }
 }
